emit events to http, with basic auth and with a bearer token
