# swagger.json
@@ -103,6 +103,30 @@
       },
       "x-go-package": "github.com/FactomProject/live-api/EventRouter/api/errors"
     },
+    "CallbackType": {
+      "description": "type of callback: [HTTP, BEARER_TOKEN, BASIC_AUTH]",
+      "type": "string",
+      "x-go-package": "github.com/FactomProject/live-api/EventRouter/models"
+    },
+    "Credentials": {
+      "description": "credentials of api to deliver events",
+      "type": "object",
+      "properties": {
+        "accessToken": {
+          "type": "string",
+          "x-go-name": "AccessToken"
+        },
+        "basicAuthPassword": {
+          "type": "string",
+          "x-go-name": "BasicAuthPassword"
+        },
+        "basicAuthUsername": {
+          "type": "string",
+          "x-go-name": "BasicAuthUsername"
+        }
+      },
+      "x-go-package": "github.com/FactomProject/live-api/EventRouter/models"
+    },
     "Filter": {
       "description": "Define a Filter on an EventType to filter the event. This allows to reduce the network traffic",
       "type": "object",
@@ -118,10 +142,6 @@
       "type": "string",
       "x-go-package": "github.com/FactomProject/live-api/EventRouter/models"
     },
-    "Model": {
-      "type": "object",
-      "x-go-package": "github.com/FactomProject/live-api/EventRouter/models"
-    },
     "Subscription": {
       "description": "An application is able to have a subscription for events\nEvents will be send to the callback endpoint of the subscription",
       "type": "object",
@@ -135,8 +155,10 @@
           "x-go-name": "Callback"
         },
         "callbackType": {
-          "description": "the type of callback: HTTP(S), HTTP with basic authentication, HTTP with OAUTH2 token",
-          "x-go-name": "CallbackType"
+          "$ref": "#/definitions/CallbackType"
+        },
+        "credentials": {
+          "$ref": "#/definitions/Credentials"
         },
         "filters": {
           "description": "the emitted event can be filter to receive not all data from an event type",
@@ -151,9 +173,6 @@
           "type": "string",
           "x-go-name": "Id",
           "readOnly": true
-        },
-        "model": {
-          "$ref": "#/definitions/Model"
         }
       },
       "x-go-package": "github.com/FactomProject/live-api/EventRouter/models"
